# AMM_backtest

./: README.md
amm-rebalance-backtester/: .gitignore  DATA_DOWNLOAD_README.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REPORTS_STRUCTURE.md  add_new_symbol.sh  demo.py  download_5year_data.py  download_5year_data.sh  fix_plot_generator.py  generate_all_pool_plots.py  get_new_data.sh  pyproject.toml  regenerate_btcusdc_plots.py  requirements.txt  run.py  run_all.sh  run_single.sh  test_project.py  validate_downloaded_data.py
amm-rebalance-backtester/configs/: btcusdc_experiment.yaml  data_schema.yaml  experiment_default.yaml
amm-rebalance-backtester/data/BTCUSDC/: price_1d.csv
amm-rebalance-backtester/data/ETHUSDC/: README.md  price_1d.csv  price_1h_sample.csv
amm-rebalance-backtester/data/USDCUSDT/: price_1d.csv
amm-rebalance-backtester/scripts/: run_full.sh  run_quick.sh
amm-rebalance-backtester/src/: __init__.py
amm-rebalance-backtester/src/core/: __init__.py  engine.py  frictions.py  il_lvr.py  math_v3.py  metrics.py  position.py
amm-rebalance-backtester/src/io/: __init__.py  loader.py  schema.py
amm-rebalance-backtester/src/opt/: __init__.py  search.py
steer_intent_backtester/: QUICKSTART.md  README.md  cli.py  compare_aggressive.py  compare_all_strategies.py  compare_all_strategies_v2.py  compare_conservative.py  compare_fixed.py  debug_calculate_range.py  debug_deep.py  debug_drawdown.py  debug_perfect_rebalancing.py  debug_price_data.py  debug_rebalancing.py  debug_strategy.py  debug_strategy_behavior.py  delayed_rebalancing.py  example.py  imperfect_strategy.py  pyproject.toml  real_imperfect_strategy.py  requirements.txt  run_tests.py  setup.py  simulate_mdd.py  test_fixed_math.py  test_minimal.py  test_real_imperfect.py  test_simple_strategy.py  verify_drawdown_calc.py
steer_intent_backtester/data/: BTCUSDC_1d.csv  USDCUSDT_1h.csv
steer_intent_backtester/reports/: aggressive_strategies_20250901_223636.csv  all_strategies_comparison_20250901_204007.csv  all_strategies_comparison_20250901_205320.csv  all_strategies_comparison_20250901_221536.csv  all_strategies_comparison_20250901_222501.csv  conservative_strategies_20250901_213436.csv  conservative_strategies_20250901_215630.csv  conservative_strategies_20250901_220936.csv  delayed_rebalancing_20250901_232326.csv  delayed_rebalancing_20250901_232630.csv  delayed_rebalancing_20250901_232716.csv  equity_curves_b968a469.csv  fixed_strategies_20250901_224232.csv  fixed_strategies_20250901_224532.csv  imperfect_strategy_20250901_233211.csv  mdd_simulation_20250901_230405.csv  mdd_simulation_20250901_230704.csv  summary_report_b968a469.txt
steer_intent_backtester/scripts/: update_data.sh  validate_data.py
steer_intent_backtester/steerbt/: __init__.py  backtester.py  curves.py  metrics.py  portfolio.py  reports.py  triggers.py  uv3_math.py
steer_intent_backtester/tests/: __init__.py  test_strategies.py  test_uv3_math.py
(+23 files in other folders)
